--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "dotenv": "^16.0.3",
     "ethers": "^5.7.2",
     "figlet": "^1.5.2",
-    "node-schedule": "^2.1.0"
+    "node-schedule": "^2.1.0",
+    "nodemailer": "^6.8.0"
   }
 }
