Added email report, untested

--- a/.env.example
+++ b/.env.example
@@ -7,6 +7,14 @@
 BSC_RPC="RPC ADDRESS HERE"
 CONTRACT_ADR="VAULT ADDRESS"
 
+# =========
+# = EMAIL =
+# =========
+RECIPIENT="@"
+EMAIL_ADDR="gmail.com"
+EMAIL_PW="app_pw"
+PRICE_API="price"
+
 # ===========
 # = WALLETS =
 # ===========
