--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "eslint": "^8.25.0"
   },
   "dependencies": {
+    "cross-fetch": "^3.1.5",
     "dotenv": "^16.0.3",
     "ethers": "^5.7.2",
     "figlet": "^1.5.2",
