Reduce gas usage

--- a/.env.example
+++ b/.env.example
@@ -4,8 +4,9 @@
 # ========
 # = NODE =
 # ========
-BSC_RPC="RPC ADDRESS HERE"
+BSC_RPC="USE POKT RPC"
 CONTRACT_ADR="VAULT ADDRESS"
+POOL_ADR="POOL ADDRESS"
 
 # =========
 # = EMAIL =
@@ -13,7 +14,7 @@ CONTRACT_ADR="VAULT ADDRESS"
 RECIPIENT="@"
 EMAIL_ADDR="gmail.com"
 EMAIL_PW="app_pw"
-PRICE_API="price"
+PRICE_API="api"
 
 # ===========
 # = WALLETS =
